--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108463547-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-108463547-1');
-</script>
+ 
 
     <meta charset="utf-8">
     <title>Reuben Talbott</title>
@@ -73,10 +65,9 @@
   <body>
     <div class="header">REUBEN TALBOTT</div>
     <div class="info">
-      Hello world! I'm Reuben and this is my website. My friend Chip and I run two Discord servers for programmers and gamers. Join them here:
+      Hello world! I'm Reuben and this is my website. 
       <div class="flex">
-        <div class="half"><a title="gaming" class="no-underline" href="https://discord.gg/v8r5vKq"><img src="gaming.png"></a></div>
-        <div class="half"><a title="coding" class="no-underline" href="https://discord.gg/jrrrG7v"><img src="coding.png"></a></div>
+        
       </div>
     </div>
     <div class="corner" title="Switch to Night Mode"><i class="fa fa-moon-o" aria-hidden="true"></i></div>
