--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
     <div class="corner" title="Switch to Night Mode"><i class="fa fa-moon-o" aria-hidden="true"></i></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="http://code.jquery.com/color/jquery.color-2.1.2.min.js" integrity="sha256-H28SdxWrZ387Ldn0qogCzFiUDDxfPiNIyJX7BECQkDE=" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script>
       var night;
       function toggle() {
