--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
- 
-
     <meta charset="utf-8">
     <title>Reuben Talbott</title>
-    <base target="_blank">
     <script src="https://use.fontawesome.com/d4cd3d7191.js"></script>
     <style>
     @import url('https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i|Oswald:600');
@@ -99,7 +96,7 @@
         }
       }
 
-      $('.corner').click(toggle());
+      $('.corner').click(toggle);
     </script>
   </body>
 </html>
