--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       position: fixed;
       bottom: 20px;
       right: 20px;
+      cursor: pointer;
     }
     </style>
   </head>
@@ -63,13 +64,9 @@
     <div class="header">REUBEN TALBOTT</div>
     <div class="info">
       Hello world! I'm Reuben and this is my website. 
-      <div class="flex">
-        
-      </div>
     </div>
     <div class="corner" title="Switch to Night Mode"><i class="fa fa-moon-o" aria-hidden="true"></i></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script>
       var night;
       function toggle() {
