--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
       var night;
       function toggle() {
         if(night == 0 || night == undefined) {
-          $('body').css({
-            'background-color': '#2f3137',
-            'color': '#eeeeee'
-          });
+          $('body').animate({
+            background-color: '#2f3137',
+            color: '#eeeeee'
+          }, 100);
           $('.header').css({
             'color': '#eeeeee'
           });
