--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Reuben Talbott</title>
     <script src="https://use.fontawesome.com/d4cd3d7191.js"></script>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <style>
     @import url('https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i|Oswald:600');
     body {
@@ -72,7 +74,7 @@
       function toggle() {
         if(night == 0 || night == undefined) {
           $('body').animate({
-            background-color: '#2f3137',
+            background: '#2f3137',
             color: '#eeeeee'
           }, 100);
           $('.header').css({
