Added WOT verification.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="wot-verification" content="f498ee7c993487acd0f1"/>
     <meta charset="utf-8">
     <title>Reuben Talbott</title>
     <script src="https://use.fontawesome.com/d4cd3d7191.js"></script>
